# CICE

./: CMakeLists.txt  cice_files.cmake
